heapuse-tests/tests/ui/fail-derive-wrong-attrs-2.rs
use heapuse_derive::Heap;
use heapuse_example::*;

#[derive(Heap)]
pub struct WrongAttr {
    #[heap(with)]
    pub a: primitive::StructPrimitives,
}

fn main() {}
